Lab 2/22299138_22299142/y.output
Terminals unused in grammar

   DO
   BREAK
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   CONTINUE


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: variable_decl
    5     | func_definition

    6 $@1: /* empty */

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement

    8 $@2: /* empty */

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement

   10 param_list: param_list COMMA type_specifier ID
   11           | param_list COMMA type_specifier
   12           | type_specifier ID
   13           | type_specifier

   14 $@3: /* empty */

   15 compound_statement: LCURL $@3 statements RCURL

   16 $@4: /* empty */

   17 compound_statement: LCURL $@4 RCURL

   18 variable_decl: type_specifier declaration_list SEMICOLON

   19 type_specifier: INT
   20               | FLOAT
   21               | VOID
   22               | CHAR

   23 declaration_list: declaration_list COMMA ID
   24                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   25                 | ID
   26                 | ID LTHIRD CONST_INT RTHIRD

   27 statements: statement
   28           | statements statement

   29 statement: variable_decl
   30          | func_definition
   31          | expression_statement
   32          | compound_statement
   33          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   34          | IF LPAREN expression RPAREN statement
   35          | IF LPAREN expression RPAREN statement ELSE statement
   36          | WHILE LPAREN expression RPAREN statement
   37          | PRINTLN LPAREN ID RPAREN SEMICOLON
   38          | RETURN expression SEMICOLON

   39 expression_statement: SEMICOLON
   40                     | expression SEMICOLON

   41 variable: ID
   42         | ID LTHIRD expression RTHIRD

   43 expression: logic_expression
   44           | variable ASSIGNOP logic_expression

   45 logic_expression: rel_expression
   46                 | rel_expression LOGICOP rel_expression

   47 rel_expression: simple_expression
   48               | simple_expression RELOP simple_expression

   49 simple_expression: term
   50                  | simple_expression ADDOP term

   51 term: unary_expression
   52     | term MULOP unary_expression

   53 unary_expression: ADDOP unary_expression
   54                 | NOT unary_expression
   55                 | factor_info

   56 factor_info: factor

   57 factor: variable
   58       | ID LPAREN argument_list RPAREN
   59       | LPAREN expression RPAREN
   60       | CONST_INT
   61       | CONST_FLOAT
   62       | variable INCOP
   63       | variable DECOP

   64 argument_list: arguments
   65              | /* empty */

   66 arguments: arguments COMMA logic_expression
   67          | logic_expression


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 34 35
ELSE (259) 35
FOR (260) 33
WHILE (261) 36
DO (262)
BREAK (263)
INT (264) 19
CHAR (265) 22
FLOAT (266) 20
DOUBLE (267)
VOID (268) 21
RETURN (269) 38
SWITCH (270)
CASE (271)
DEFAULT (272)
CONTINUE (273)
PRINTLN (274) 37
ADDOP (275) 50 53
MULOP (276) 52
INCOP (277) 62
DECOP (278) 63
RELOP (279) 48
ASSIGNOP (280) 44
LOGICOP (281) 46
NOT (282) 54
LPAREN (283) 7 9 33 34 35 36 37 58 59
RPAREN (284) 7 9 33 34 35 36 37 58 59
LCURL (285) 15 17
RCURL (286) 15 17
LTHIRD (287) 24 26 42
RTHIRD (288) 24 26 42
COMMA (289) 10 11 23 24 66
SEMICOLON (290) 18 37 38 39 40
CONST_INT (291) 24 26 60
CONST_FLOAT (292) 61
ID (293) 7 9 10 12 23 24 25 26 37 41 42 58
LOWER_THAN_ELSE (294)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
start (41)
    on left: 1, on right: 0
program (42)
    on left: 2 3, on right: 1 2
unit (43)
    on left: 4 5, on right: 2 3
func_definition (44)
    on left: 7 9, on right: 5 30
$@1 (45)
    on left: 6, on right: 7
$@2 (46)
    on left: 8, on right: 9
param_list (47)
    on left: 10 11 12 13, on right: 7 10 11
compound_statement (48)
    on left: 15 17, on right: 7 9 32
$@3 (49)
    on left: 14, on right: 15
$@4 (50)
    on left: 16, on right: 17
variable_decl (51)
    on left: 18, on right: 4 29
type_specifier (52)
    on left: 19 20 21 22, on right: 7 9 10 11 12 13 18
declaration_list (53)
    on left: 23 24 25 26, on right: 18 23 24
statements (54)
    on left: 27 28, on right: 15 28
statement (55)
    on left: 29 30 31 32 33 34 35 36 37 38, on right: 27 28 33 34 35
    36
expression_statement (56)
    on left: 39 40, on right: 31 33
variable (57)
    on left: 41 42, on right: 44 57 62 63
expression (58)
    on left: 43 44, on right: 33 34 35 36 38 40 42 59
logic_expression (59)
    on left: 45 46, on right: 43 44 66 67
rel_expression (60)
    on left: 47 48, on right: 45 46
simple_expression (61)
    on left: 49 50, on right: 47 48 50
term (62)
    on left: 51 52, on right: 49 50 52
unary_expression (63)
    on left: 53 54 55, on right: 51 52 53 54
factor_info (64)
    on left: 56, on right: 55
factor (65)
    on left: 57 58 59 60 61 62 63, on right: 56
argument_list (66)
    on left: 64 65, on right: 58
arguments (67)
    on left: 66 67, on right: 64 66


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    start            go to state 5
    program          go to state 6
    unit             go to state 7
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 1

   19 type_specifier: INT .

    $default  reduce using rule 19 (type_specifier)


State 2

   22 type_specifier: CHAR .

    $default  reduce using rule 22 (type_specifier)


State 3

   20 type_specifier: FLOAT .

    $default  reduce using rule 20 (type_specifier)


State 4

   21 type_specifier: VOID .

    $default  reduce using rule 21 (type_specifier)


State 5

    0 $accept: start . $end

    $end  shift, and go to state 11


State 6

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    $default  reduce using rule 1 (start)

    unit             go to state 12
    func_definition  go to state 8
    variable_decl    go to state 9
    type_specifier   go to state 10


State 7

    3 program: unit .

    $default  reduce using rule 3 (program)


State 8

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 9

    4 unit: variable_decl .

    $default  reduce using rule 4 (unit)


State 10

    7 func_definition: type_specifier . ID LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier . ID LPAREN RPAREN $@2 compound_statement
   18 variable_decl: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 13

    declaration_list  go to state 14


State 11

    0 $accept: start $end .

    $default  accept


State 12

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 13

    7 func_definition: type_specifier ID . LPAREN param_list RPAREN $@1 compound_statement
    9                | type_specifier ID . LPAREN RPAREN $@2 compound_statement
   25 declaration_list: ID .
   26                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 15
    LTHIRD  shift, and go to state 16

    $default  reduce using rule 25 (declaration_list)


State 14

   18 variable_decl: type_specifier declaration_list . SEMICOLON
   23 declaration_list: declaration_list . COMMA ID
   24                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    COMMA      shift, and go to state 17
    SEMICOLON  shift, and go to state 18


State 15

    7 func_definition: type_specifier ID LPAREN . param_list RPAREN $@1 compound_statement
    9                | type_specifier ID LPAREN . RPAREN $@2 compound_statement

    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    FLOAT   shift, and go to state 3
    VOID    shift, and go to state 4
    RPAREN  shift, and go to state 19

    param_list      go to state 20
    type_specifier  go to state 21


State 16

   26 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 22


State 17

   23 declaration_list: declaration_list COMMA . ID
   24                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 23


State 18

   18 variable_decl: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 18 (variable_decl)


State 19

    9 func_definition: type_specifier ID LPAREN RPAREN . $@2 compound_statement

    $default  reduce using rule 8 ($@2)

    $@2  go to state 24


State 20

    7 func_definition: type_specifier ID LPAREN param_list . RPAREN $@1 compound_statement
   10 param_list: param_list . COMMA type_specifier ID
   11           | param_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 21

   12 param_list: type_specifier . ID
   13           | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 13 (param_list)


State 22

   26 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 23

   23 declaration_list: declaration_list COMMA ID .
   24                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 23 (declaration_list)


State 24

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 31


State 25

    7 func_definition: type_specifier ID LPAREN param_list RPAREN . $@1 compound_statement

    $default  reduce using rule 6 ($@1)

    $@1  go to state 32


State 26

   10 param_list: param_list COMMA . type_specifier ID
   11           | param_list COMMA . type_specifier

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    type_specifier  go to state 33


State 27

   12 param_list: type_specifier ID .

    $default  reduce using rule 12 (param_list)


State 28

   26 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 26 (declaration_list)


State 29

   24 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 34


State 30

   15 compound_statement: LCURL . $@3 statements RCURL
   17                   | LCURL . $@4 RCURL

    RCURL     reduce using rule 16 ($@4)
    $default  reduce using rule 14 ($@3)

    $@3  go to state 35
    $@4  go to state 36


State 31

    9 func_definition: type_specifier ID LPAREN RPAREN $@2 compound_statement .

    $default  reduce using rule 9 (func_definition)


State 32

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 . compound_statement

    LCURL  shift, and go to state 30

    compound_statement  go to state 37


State 33

   10 param_list: param_list COMMA type_specifier . ID
   11           | param_list COMMA type_specifier .

    ID  shift, and go to state 38

    $default  reduce using rule 11 (param_list)


State 34

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 39


State 35

   15 compound_statement: LCURL $@3 . statements RCURL

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statements            go to state 55
    statement             go to state 56
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 36

   17 compound_statement: LCURL $@4 . RCURL

    RCURL  shift, and go to state 67


State 37

    7 func_definition: type_specifier ID LPAREN param_list RPAREN $@1 compound_statement .

    $default  reduce using rule 7 (func_definition)


State 38

   10 param_list: param_list COMMA type_specifier ID .

    $default  reduce using rule 10 (param_list)


State 39

   24 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 24 (declaration_list)


State 40

   34 statement: IF . LPAREN expression RPAREN statement
   35          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 68


State 41

   33 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 69


State 42

   36 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 70


State 43

   38 statement: RETURN . expression SEMICOLON

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 71
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 44

   37 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 72


State 45

   53 unary_expression: ADDOP . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 73
    unary_expression  go to state 74
    factor_info       go to state 65
    factor            go to state 66


State 46

   54 unary_expression: NOT . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 73
    unary_expression  go to state 75
    factor_info       go to state 65
    factor            go to state 66


State 47

   59 factor: LPAREN . expression RPAREN

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 76
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 48

   39 expression_statement: SEMICOLON .

    $default  reduce using rule 39 (expression_statement)


State 49

   60 factor: CONST_INT .

    $default  reduce using rule 60 (factor)


State 50

   61 factor: CONST_FLOAT .

    $default  reduce using rule 61 (factor)


State 51

   41 variable: ID .
   42         | ID . LTHIRD expression RTHIRD
   58 factor: ID . LPAREN argument_list RPAREN

    LPAREN  shift, and go to state 77
    LTHIRD  shift, and go to state 78

    $default  reduce using rule 41 (variable)


State 52

   30 statement: func_definition .

    $default  reduce using rule 30 (statement)


State 53

   32 statement: compound_statement .

    $default  reduce using rule 32 (statement)


State 54

   29 statement: variable_decl .

    $default  reduce using rule 29 (statement)


State 55

   15 compound_statement: LCURL $@3 statements . RCURL
   28 statements: statements . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    RCURL        shift, and go to state 79
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 80
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 56

   27 statements: statement .

    $default  reduce using rule 27 (statements)


State 57

   31 statement: expression_statement .

    $default  reduce using rule 31 (statement)


State 58

   44 expression: variable . ASSIGNOP logic_expression
   57 factor: variable .
   62       | variable . INCOP
   63       | variable . DECOP

    INCOP     shift, and go to state 81
    DECOP     shift, and go to state 82
    ASSIGNOP  shift, and go to state 83

    $default  reduce using rule 57 (factor)


State 59

   40 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 84


State 60

   43 expression: logic_expression .

    $default  reduce using rule 43 (expression)


State 61

   45 logic_expression: rel_expression .
   46                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 85

    $default  reduce using rule 45 (logic_expression)


State 62

   47 rel_expression: simple_expression .
   48               | simple_expression . RELOP simple_expression
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 86
    RELOP  shift, and go to state 87

    $default  reduce using rule 47 (rel_expression)


State 63

   49 simple_expression: term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 49 (simple_expression)


State 64

   51 term: unary_expression .

    $default  reduce using rule 51 (term)


State 65

   55 unary_expression: factor_info .

    $default  reduce using rule 55 (unary_expression)


State 66

   56 factor_info: factor .

    $default  reduce using rule 56 (factor_info)


State 67

   17 compound_statement: LCURL $@4 RCURL .

    $default  reduce using rule 17 (compound_statement)


State 68

   34 statement: IF LPAREN . expression RPAREN statement
   35          | IF LPAREN . expression RPAREN statement ELSE statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 89
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 69

   33 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 90
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 70

   36 statement: WHILE LPAREN . expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 91
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 71

   38 statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 92


State 72

   37 statement: PRINTLN LPAREN . ID RPAREN SEMICOLON

    ID  shift, and go to state 93


State 73

   57 factor: variable .
   62       | variable . INCOP
   63       | variable . DECOP

    INCOP  shift, and go to state 81
    DECOP  shift, and go to state 82

    $default  reduce using rule 57 (factor)


State 74

   53 unary_expression: ADDOP unary_expression .

    $default  reduce using rule 53 (unary_expression)


State 75

   54 unary_expression: NOT unary_expression .

    $default  reduce using rule 54 (unary_expression)


State 76

   59 factor: LPAREN expression . RPAREN

    RPAREN  shift, and go to state 94


State 77

   58 factor: ID LPAREN . argument_list RPAREN

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    $default  reduce using rule 65 (argument_list)

    variable           go to state 73
    logic_expression   go to state 95
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66
    argument_list      go to state 96
    arguments          go to state 97


State 78

   42 variable: ID LTHIRD . expression RTHIRD

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 98
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 79

   15 compound_statement: LCURL $@3 statements RCURL .

    $default  reduce using rule 15 (compound_statement)


State 80

   28 statements: statements statement .

    $default  reduce using rule 28 (statements)


State 81

   62 factor: variable INCOP .

    $default  reduce using rule 62 (factor)


State 82

   63 factor: variable DECOP .

    $default  reduce using rule 63 (factor)


State 83

   44 expression: variable ASSIGNOP . logic_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 73
    logic_expression   go to state 99
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 84

   40 expression_statement: expression SEMICOLON .

    $default  reduce using rule 40 (expression_statement)


State 85

   46 logic_expression: rel_expression LOGICOP . rel_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 73
    rel_expression     go to state 100
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 86

   50 simple_expression: simple_expression ADDOP . term

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 73
    term              go to state 101
    unary_expression  go to state 64
    factor_info       go to state 65
    factor            go to state 66


State 87

   48 rel_expression: simple_expression RELOP . simple_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 73
    simple_expression  go to state 102
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 88

   52 term: term MULOP . unary_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable          go to state 73
    unary_expression  go to state 103
    factor_info       go to state 65
    factor            go to state 66


State 89

   34 statement: IF LPAREN expression . RPAREN statement
   35          | IF LPAREN expression . RPAREN statement ELSE statement

    RPAREN  shift, and go to state 104


State 90

   33 statement: FOR LPAREN expression_statement . expression_statement expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    expression_statement  go to state 105
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 91

   36 statement: WHILE LPAREN expression . RPAREN statement

    RPAREN  shift, and go to state 106


State 92

   38 statement: RETURN expression SEMICOLON .

    $default  reduce using rule 38 (statement)


State 93

   37 statement: PRINTLN LPAREN ID . RPAREN SEMICOLON

    RPAREN  shift, and go to state 107


State 94

   59 factor: LPAREN expression RPAREN .

    $default  reduce using rule 59 (factor)


State 95

   67 arguments: logic_expression .

    $default  reduce using rule 67 (arguments)


State 96

   58 factor: ID LPAREN argument_list . RPAREN

    RPAREN  shift, and go to state 108


State 97

   64 argument_list: arguments .
   66 arguments: arguments . COMMA logic_expression

    COMMA  shift, and go to state 109

    $default  reduce using rule 64 (argument_list)


State 98

   42 variable: ID LTHIRD expression . RTHIRD

    RTHIRD  shift, and go to state 110


State 99

   44 expression: variable ASSIGNOP logic_expression .

    $default  reduce using rule 44 (expression)


State 100

   46 logic_expression: rel_expression LOGICOP rel_expression .

    $default  reduce using rule 46 (logic_expression)


State 101

   50 simple_expression: simple_expression ADDOP term .
   52 term: term . MULOP unary_expression

    MULOP  shift, and go to state 88

    $default  reduce using rule 50 (simple_expression)


State 102

   48 rel_expression: simple_expression RELOP simple_expression .
   50 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 86

    $default  reduce using rule 48 (rel_expression)


State 103

   52 term: term MULOP unary_expression .

    $default  reduce using rule 52 (term)


State 104

   34 statement: IF LPAREN expression RPAREN . statement
   35          | IF LPAREN expression RPAREN . statement ELSE statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 111
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 105

   33 statement: FOR LPAREN expression_statement expression_statement . expression RPAREN statement

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 58
    expression         go to state 112
    logic_expression   go to state 60
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 106

   36 statement: WHILE LPAREN expression RPAREN . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 113
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 107

   37 statement: PRINTLN LPAREN ID RPAREN . SEMICOLON

    SEMICOLON  shift, and go to state 114


State 108

   58 factor: ID LPAREN argument_list RPAREN .

    $default  reduce using rule 58 (factor)


State 109

   66 arguments: arguments COMMA . logic_expression

    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    variable           go to state 73
    logic_expression   go to state 115
    rel_expression     go to state 61
    simple_expression  go to state 62
    term               go to state 63
    unary_expression   go to state 64
    factor_info        go to state 65
    factor             go to state 66


State 110

   42 variable: ID LTHIRD expression RTHIRD .

    $default  reduce using rule 42 (variable)


State 111

   34 statement: IF LPAREN expression RPAREN statement .
   35          | IF LPAREN expression RPAREN statement . ELSE statement

    ELSE  shift, and go to state 116

    $default  reduce using rule 34 (statement)


State 112

   33 statement: FOR LPAREN expression_statement expression_statement expression . RPAREN statement

    RPAREN  shift, and go to state 117


State 113

   36 statement: WHILE LPAREN expression RPAREN statement .

    $default  reduce using rule 36 (statement)


State 114

   37 statement: PRINTLN LPAREN ID RPAREN SEMICOLON .

    $default  reduce using rule 37 (statement)


State 115

   66 arguments: arguments COMMA logic_expression .

    $default  reduce using rule 66 (arguments)


State 116

   35 statement: IF LPAREN expression RPAREN statement ELSE . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
    LPAREN       shift, and go to state 47
    LCURL        shift, and go to state 30
    SEMICOLON    shift, and go to state 48
    CONST_INT    shift, and go to state 49
    CONST_FLOAT  shift, and go to state 50
    ID           shift, and go to state 51

    func_definition       go to state 52
    compound_statement    go to state 53
    variable_decl         go to state 54
    type_specifier        go to state 10
    statement             go to state 118
    expression_statement  go to state 57
    variable              go to state 58
    expression            go to state 59
    logic_expression      go to state 60
    rel_expression        go to state 61
    simple_expression     go to state 62
    term                  go to state 63
    unary_expression      go to state 64
    factor_info           go to state 65
    factor                go to state 66


State 117

   33 statement: FOR LPAREN expression_statement expression_statement expression RPAREN . statement

    IF           shift, and go to state 40
    FOR          shift, and go to state 41
    WHILE        shift, and go to state 42
    INT          shift, and go to state 1
    CHAR         shift, and go to state 2
    FLOAT        shift, and go to state 3
    VOID         shift, and go to state 4
    RETURN       shift, and go to state 43
    PRINTLN      shift, and go to state 44
    ADDOP        shift, and go to state 45
    NOT          shift, and go to state 46
